Sessiones jdbc
can manage them with Serializable